# jspace

./: .gitignore  .pdm.toml  main.py  notify.py  pyproject.toml
__pypackages__/3.9/lib/APScheduler-3.7.0.dist-info/: RECORD
__pypackages__/3.9/lib/certifi-2021.5.30.dist-info/: RECORD
__pypackages__/3.9/lib/h11-0.12.0.dist-info/: RECORD
__pypackages__/3.9/lib/httpcore-0.13.3.dist-info/: RECORD
__pypackages__/3.9/lib/httpx-0.18.1.dist-info/: RECORD
__pypackages__/3.9/lib/idna-3.2.dist-info/: RECORD
__pypackages__/3.9/lib/pytz-2021.1.dist-info/: RECORD
__pypackages__/3.9/lib/rfc3986-1.5.0.dist-info/: RECORD
__pypackages__/3.9/lib/setuptools-57.0.0.dist-info/: RECORD  SHARED
__pypackages__/3.9/lib/six-1.16.0.dist-info/: RECORD
__pypackages__/3.9/lib/sniffio-1.2.0.dist-info/: RECORD
__pypackages__/3.9/lib/tzlocal-2.1.dist-info/: RECORD
jc/: index.py  requirements.txt
